Update Market.java
Back compatibility with java 20